Добавлены фильтры и сортировка на бэк
