# packages/backend/src/helpers/db/getSortRequest.ts
@@ -1,0 +1,15 @@
+import { FindOptionsOrder } from 'typeorm';
+import { SortDTO } from './types';
+import { isExist } from '../isExist';
+
+export const getSortRequest = <T extends object>(
+  sort?: SortDTO<T>,
+): FindOptionsOrder<T> | undefined => {
+  if (!isExist(sort)) {
+    return;
+  }
+
+  return {
+    [sort.by]: sort.order,
+  } as FindOptionsOrder<T>;
+};
